added more animation stylings and Dom manipulation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
             <div id="scissor-left"></div>
         </div>
         <div class="prompt">
-
+            <div id="message" class="countdown">
+                <div class="slides">
+                  <h1>Rock</h1>
+                </div>
+                
+                <div class="slides">
+                  <h1>Paper</h1>
+                </div>
+                
+                <div class="slides">
+                  <h1>Scissor</h1>
+                </div>
+            </div>
 
         </div>
         <div class="hands player-hand-right">
