removed udated functions, finished gameplay logic

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         </div>
     </div>
     <div class="buttons">
+        <div id="new-game"><button id="start"><h1>START</h1></button></div>
         <div class="click-btn"><button class="action-btn" id="rock"></button></div>
         <div class="click-btn"><button class="action-btn" id="paper"></button></div>
         <div class="click-btn"><button class="action-btn" id="scissor"></button></div>
